# ScreenMouseKeyboard

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: Screen.hpp
src/: Screen.cpp  main.cpp
